src/components/Scroll/Scroll.styl
@import './Scroll.helpers.styl'

$offset = 8px
$minLength = 30px

$barSizeXS = 1px
$barSizeS = 1px
$barSizeM = 5px
$barSizeL = 9px
$barSizeXL = 14px

.root
  position relative
  display flex
  --hide-delay: .3s

.inner
  position relative
  width 100%
  overflow hidden
  -webkit-overflow-scrolling touch
  transition mask-image .3s ease-out

  &.smooth
    scroll-behavior smooth

  // hide native scrollbars
  -ms-overflow-style none  // IE and Edge
  scrollbar-width none  // Firefox
  &::-webkit-scrollbar // for Chrome, Safari and Opera
    display none

  .y &
    max-height 100%
    overflow-y auto
  .x &
    max-width 100%
    overflow-x auto

  .fadeSize-xs &
    --fade-size: 6px;
  .fadeSize-s &
    --fade-size: 10px;
  .fadeSize-m &
    --fade-size: 16px;
  .fadeSize-l &
    --fade-size: 20px;
  .fadeSize-xl &
    --fade-size: 30px;

  .y &.hasOffsetTop.hasOffsetBottom
    mask-image fadeMask(bottom, var(--fade-size))
  .y &.hasOffsetTop
    mask-image fadeMaskTop(var(--fade-size))
  .y &.hasOffsetBottom
    mask-image fadeMaskBottom(var(--fade-size))

  .x &.hasOffsetLeft.hasOffsetRight
    mask-image fadeMask(right, var(--fade-size))
  .x &.hasOffsetLeft
    mask-image fadeMaskLeft(var(--fade-size))
  .x &.hasOffsetRight
    mask-image fadeMaskRight(var(--fade-size))


.thumb
  position absolute
  background-color var(--accent-color-alpha-200)
  border-radius 1px
  transition background-color .1s ease-out
  transform-origin center

  .y > &
    top 0
    width 100%
    min-height $minLength

  .x > &
    left 0
    height 100%
    min-width $minLength

.bar
  z-index 2
  position absolute
  transition .1s opacity var(--hide-delay) ease-out
  border-radius 2px
  cursor pointer
  touch-action none
  overscroll-behavior contain

  .autoHide > &
    transition .3s opacity calc(var(--hide-delay) * .6) ease-out
    opacity 0

  &::before
    content ''
    position absolute
    transition .3s background-color var(--hide-delay) ease-out
    pointer-events none

  .isDesktop &:hover
  &.isActive
    z-index 1
    opacity 1
    transition-delay 0s

    &::before
      background-color var(--accent-color-alpha-100)

    & .thumb
      background-color var(--active-color)

  .isScrolling > &
    transition none
    opacity 1

  &.y
    right 0
    top $offset
    bottom @top

    .isTouch &
      width 32px

    &::before
    & .thumb
      right 0

    &::before
      width 16px
      height 100%

  &.x
    bottom 0
    right $offset
    left @right
    height 16px

    .isTouch &
      height 32px

    &::before
    & .thumb
      bottom 0

    &::before
      width 100%

.bar.x
  height 32px

  &::before
  & .thumb
    bottom 0

    .size-xs > &
      height $barSizeXS
      border-radius 'calc(%s / 2)' % $barSizeXS
    .size-s > &
      height $barSizeS
      border-radius 'calc(%s / 2)' % $barSizeS
    .size-m > &
      height $barSizeM
      border-radius 'calc(%s / 2)' % $barSizeM
    .size-l > &
      height $barSizeL
      border-radius 'calc(%s / 2)' % $barSizeL
    .size-xl > &
      height $barSizeXL
      border-radius 'calc(%s / 2)' % $barSizeXL

.bar.y
  width 32px

  &::before
  & .thumb
    right 0

    .size-xs > &
      width $barSizeXS
      border-radius 'calc(%s / 2)' % $barSizeXS
    .size-s > &
      width $barSizeS
    .size-m > &
      width $barSizeM
      border-radius 'calc(%s / 2)' % $barSizeM
    .size-l > &
      width $barSizeL
      border-radius 'calc(%s / 2)' % $barSizeL
    .size-xl > &
      width $barSizeXL
      border-radius 'calc(%s / 2)' % $barSizeXL

